test/corpus/numbers.txt
===
Decimal (integer, unsigned)
===

ident 123

---

(source_file
  (node
    (identifier (bare_identifier))
    (value
      (number
        (decimal)))))

===
Decimal (integer, signed)
===

ident -123

---

(source_file
  (node
    (identifier (bare_identifier))
    (value
      (number
        (decimal)))))

===
Decimal (real, unsigned)
===

ident 3.14159

---

(source_file
  (node
    (identifier (bare_identifier))
    (value
      (number
        (decimal)))))

===
Decimal (real, signed)
===

ident +3.14159

---

(source_file
  (node
    (identifier (bare_identifier))
    (value
      (number
        (decimal)))))

===
Decimal (real, unsigned, with unsigned exponent)
===

ident 6.02e23

---

(source_file
  (node
    (identifier (bare_identifier))
    (value
      (number
        (decimal)))))

===
Decimal (real, signed, with signed exponent)
===

ident +6.02e+23

---

(source_file
  (node
    (identifier (bare_identifier))
    (value
      (number
        (decimal)))))
